// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Comment> with replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgb(255, 255, 255)",
        "borderTopWidth": 3,
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
        "marginBottom": 0,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 60,
        }
      }
    >
      <View>
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginVertical": 10,
        }
      }
    >
      <Title
        text="Meu pai fez o que ela mandou"
      />
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(45, 82, 113)",
              "fontWeight": "bold",
            }
          }
        >
          Empodere Duas Mulheres 
        </Text>
        há 20 horas
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e...
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 3.3333333333333335,
        }
      }
    >
      <Badge
        left={0}
        number={1}
        staticPosition={true}
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Comments<Comment> without replies renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "borderTopColor": "rgb(255, 255, 255)",
        "borderTopWidth": 3,
        "flex": 1,
        "flexDirection": "row",
        "margin": 10,
        "marginBottom": 0,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": 60,
        }
      }
    >
      <View>
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 10,
          "marginVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontStyle": "italic",
            "marginBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(45, 82, 113)",
              "fontWeight": "bold",
            }
          }
        >
          Empodere Duas Mulheres 
        </Text>
        há 9 minutos
      </Text>
      <Text
        style={
          Object {
            "flex": 1,
            "flexWrap": "nowrap",
          }
        }
      >
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e...
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginRight": 3.3333333333333335,
        }
      }
    >
      <customIcon
        colour="rgba(45, 82, 113, 0.60)"
        name="angle-double-right"
      />
    </View>
  </View>
</TouchableOpacity>
`;
